--- a/Server/package.json
+++ b/Server/package.json
@@ -6,11 +6,14 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "cookie-parser": "~1.4.4",
+    "cookie-parser": "^1.4.4",
+    "cors": "^2.8.5",
     "debug": "~2.6.9",
-    "express": "~4.16.1",
-    "http-errors": "~1.6.3",
+    "express": "^4.16.4",
+    "helmet": "^3.21.2",
+    "http-errors": "^1.6.3",
     "jade": "~1.11.0",
-    "morgan": "~1.9.1"
+    "morgan": "^1.9.1",
+    "pg": "^7.17.1"
   }
 }
