--- a/Server/package.json
+++ b/Server/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "start": "node ./bin/www"
   },
+  "proxy": "http://localhost:5000",
   "dependencies": {
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
